build/log/idf_py_stdout_output_23216
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\manish.tomar\workspace\NetStick\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/manish.tomar/workspace/NetStick/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/manish.tomar/workspace/NetStick/build/config -IC:/Users/manish.tomar/workspace/NetStick/main/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/sys -IC:/Users/manish.tomar/workspace/NetStick/components/esp32-camera/driver/include -IC:/Users/manish.tomar/workspace/NetStick/components/esp32-camera/conversions/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_ringbuf/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/manish.tomar/workspace/NetStick=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\camera.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/camera.c.obj -c C:/Users/manish.tomar/workspace/NetStick/main/camera.c
In file included from C:/Users/manish.tomar/workspace/NetStick/main/camera.c:2:
C:/Users/manish.tomar/workspace/NetStick/main/camera.c: In function 'init_camera':
C:/Users/manish.tomar/workspace/NetStick/main/camera.c:13:45: error: implicit declaration of function 'esp_get_free_heap_size' [-Werror=implicit-function-declaration]
   13 |     ESP_LOGI(TAG, "Free internal heap: %d", esp_get_free_heap_size());
      |                                             ^~~~~~~~~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include/esp_log.h:436:137: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include/esp_log.h:368:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  368 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
C:/Users/manish.tomar/workspace/NetStick/main/camera.c:13:5: note: in expansion of macro 'ESP_LOGI'
   13 |     ESP_LOGI(TAG, "Free internal heap: %d", esp_get_free_heap_size());
      |     ^~~~~~~~
C:/Users/manish.tomar/workspace/NetStick/main/camera.c:14:37: error: implicit declaration of function 'esp_spiram_get_free_size'; did you mean 'heap_caps_get_free_size'? [-Werror=implicit-function-declaration]
   14 |     ESP_LOGI(TAG, "Free PSRAM: %d", esp_spiram_get_free_size());
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include/esp_log.h:436:137: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include/esp_log.h:368:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  368 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
C:/Users/manish.tomar/workspace/NetStick/main/camera.c:14:5: note: in expansion of macro 'ESP_LOGI'
   14 |     ESP_LOGI(TAG, "Free PSRAM: %d", esp_spiram_get_free_size());
      |     ^~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
